# pyCrawler

./: .gitignore  LICENSE  README.md  pyproject.toml  report.csv  report104.csv  report20.csv  report3.csv  requirements.txt
crawler/: crawl_img.py  main.py
crawler/crawlerext/: crawl_img.py
crawlerext/: crawl_img.py
data/: report.csv  report10.csv  report12.csv  report20.csv  report21.csv  report24.csv  report27.csv  report28.csv  report30.csv
tests/: test_main.py  test_module.py
